# regexp

./: .gitignore  .travis.yml  LICENSE  README.md  regexp.cabal  stack.yaml  submission.sh
paper/: .gitignore  Makefile  bibliography-extra.bib  bibliography.bibdb  report.tex
paper/macro/: code.sty  generic.sty
src/: SparseMatrix.hs  SparseVector.hs
src/Data/: BooleanAlgebra.hs  GSet.hs  KleeneAlgebra.hs  Semiring.hs
src/RegExp/: Derivative.hs  Equation.hs  Language.hs  Operations.hs  RegExp.hs
src/RegExp/Internal/: DFA.hs
test/: Helpers.hs
test/Data/: GSetSpec.hs
test/RegExp/: OperationsSpec.hs  RegExpSpec.hs
test/RegExp/Internal/: DFASpec.hs
